coding func handletabchange done

--- a/admission/index.html
+++ b/admission/index.html
@@ -346,13 +346,104 @@
                         </div>
                     </div>
                 </div>
+                <div class="admission_options u-padd" data-fadein>
+                    <div class="admission_nav">
+                        <ul>
+                            <li class="--active" data-tabs-items="tab1">
+                                <div class="arrow sp-only">
+                                    <svg width="20" height="12">
+                                        <use xlink:href="#arrow-icon"></use>
+                                    </svg>
+                                </div>
+                                <p>
+                                    「保育園枠」<br class="pc-only" />
+                                    ご利用の場合
+                                </p>
+                            </li>
+                            <li data-tabs-items="tab2">
+                                <svg width="20" height="12">
+                                    <use xlink:href="#arrow-icon"></use>
+                                </svg>
+                                <p>
+                                    「幼稚園枠」<br class="pc-only" />
+                                    ご利用の場合
+                                </p>
+                            </li>
+                            <li data-tabs-items="tab3">
+                                <svg width="20" height="12">
+                                    <use xlink:href="#arrow-icon"></use>
+                                </svg>
+                                <p>
+                                    どちらの枠を利用<br class="pc-only" />
+                                    すべきかわからない
+                                </p>
+                            </li>
+                            <li data-tabs-items="tab4">
+                                <svg width="20" height="12">
+                                    <use xlink:href="#arrow-icon"></use>
+                                </svg>
+                                <p>
+                                    療育クラスを<br class="pc-only" />
+                                    ご検討の方
+                                </p>
+                            </li>
+                        </ul>
+                        <span class="indicator" data-tabs-indicator></span>
+                    </div>
+                    <div class="admission_tabs">
+                        <div class="admission_tabs_content --active" data-tabs-content="tab1">1</div>
+                        <div class="admission_tabs_content" data-tabs-content="tab2">2</div>
+                        <div class="admission_tabs_content" data-tabs-content="tab3">3</div>
+                        <div class="admission_tabs_content" data-tabs-content="tab4">4</div>
+                    </div>
+                    <div class="admission_nav sp-only">
+                        <ul>
+                            <li class="--active" data-tabs-items="tab1">
+                                <svg width="20" height="12">
+                                    <use xlink:href="#arrow-icon"></use>
+                                </svg>
+                                <p>
+                                    「保育園枠」<br class="pc-only" />
+                                    ご利用の場合
+                                </p>
+                            </li>
+                            <li data-tabs-items="tab2">
+                                <svg width="20" height="12">
+                                    <use xlink:href="#arrow-icon"></use>
+                                </svg>
+                                <p>
+                                    「幼稚園枠」<br class="pc-only" />
+                                    ご利用の場合
+                                </p>
+                            </li>
+                            <li data-tabs-items="tab3">
+                                <svg width="20" height="12">
+                                    <use xlink:href="#arrow-icon"></use>
+                                </svg>
+                                <p>
+                                    どちらの枠を利用<br class="pc-only" />
+                                    すべきかわからない
+                                </p>
+                            </li>
+                            <li data-tabs-items="tab4">
+                                <svg width="20" height="12">
+                                    <use xlink:href="#arrow-icon"></use>
+                                </svg>
+                                <p>
+                                    療育クラスを<br class="pc-only" />
+                                    ご検討の方
+                                </p>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
                 <div class="admission_apply" data-fadein>
                     <div class="admission_apply_inner">
                         <div class="c-title --center">
                             <h3>未就園児 / 小学生向け</h3>
                             <span></span>
                         </div>
-                        <div class="admission_apply_content" >
+                        <div class="admission_apply_content">
                             <p>
                                 テキストが入りますテキストが入りますテキストが入りますテキストが入ります
                                 テキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入ります
