--- a/daily-life/index.html
+++ b/daily-life/index.html
@@ -396,12 +396,12 @@
                 <div class="daily_tabs u-padd" data-fadein>
                     <div class="daily_tabs_list">
                         <ul data-tabs>
-                            <li class="--active" data-tabs-items>園の一日</li>
-                            <li data-tabs-items>年間行事</li>
+                            <li class="--active" data-tabs-items="tab1">園の一日</li>
+                            <li data-tabs-items="tab2">年間行事</li>
                         </ul>
                     </div>
                     <div class="daily_tabs_group">
-                        <div class="daily_tabs_content daily_timeline --active" data-tabs-content>
+                        <div class="daily_tabs_content daily_timeline --active" data-tabs-content="tab1">
                             <div class="daily_timeline_list">
                                 <!-- 7:30 -->
                                 <div class="daily_timeline_items">
@@ -615,7 +615,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="daily_tabs_content daily_event" data-tabs-content>
+                        <div class="daily_tabs_content daily_event" data-tabs-content="tab2">
                             <div class="daily_event_list">
                                 <!-- 4月/5月 -->
                                 <div class="daily_event_items">
@@ -651,8 +651,8 @@
                                     <div class="daily_event_inner">
                                         <div class="daily_event_content">
                                             <picture class="c-picture">
-                                                <img class="lazy" data-src="/assets/images/placeholder.webp"
-                                                    alt="参観日" draggable="fasle" width="531" height="354">
+                                                <img class="lazy" data-src="/assets/images/placeholder.webp" alt="参観日"
+                                                    draggable="fasle" width="531" height="354">
                                             </picture>
                                             <h4>参観日</h4>
                                         </div>
@@ -674,8 +674,8 @@
                                     <div class="daily_event_inner">
                                         <div class="daily_event_content">
                                             <picture class="c-picture">
-                                                <img class="lazy" data-src="/assets/images/placeholder.webp"
-                                                    alt="七夕集会" draggable="fasle" width="531" height="354">
+                                                <img class="lazy" data-src="/assets/images/placeholder.webp" alt="七夕集会"
+                                                    draggable="fasle" width="531" height="354">
                                             </picture>
                                             <h4>七夕集会</h4>
                                         </div>
@@ -709,8 +709,8 @@
                                         </div>
                                         <div class="daily_event_content">
                                             <picture class="c-picture">
-                                                <img class="lazy" data-src="/assets/images/placeholder.webp"
-                                                    alt="夕涼み会" draggable="fasle" width="531" height="354">
+                                                <img class="lazy" data-src="/assets/images/placeholder.webp" alt="夕涼み会"
+                                                    draggable="fasle" width="531" height="354">
                                             </picture>
                                             <h4>夕涼み会</h4>
                                         </div>
@@ -748,8 +748,8 @@
                                         </div>
                                         <div class="daily_event_content">
                                             <picture class="c-picture">
-                                                <img class="lazy" data-src="/assets/images/placeholder.webp"
-                                                    alt="神輿担ぎ" draggable="fasle" width="531" height="354">
+                                                <img class="lazy" data-src="/assets/images/placeholder.webp" alt="神輿担ぎ"
+                                                    draggable="fasle" width="531" height="354">
                                             </picture>
                                             <h4>神輿担ぎ</h4>
                                         </div>
@@ -778,8 +778,8 @@
                                         </div>
                                         <div class="daily_event_content">
                                             <picture class="c-picture">
-                                                <img class="lazy" data-src="/assets/images/placeholder.webp"
-                                                    alt="秋の遠足" draggable="fasle" width="531" height="354">
+                                                <img class="lazy" data-src="/assets/images/placeholder.webp" alt="秋の遠足"
+                                                    draggable="fasle" width="531" height="354">
                                             </picture>
                                             <h4>秋の遠足</h4>
                                         </div>
@@ -794,15 +794,15 @@
                                     <div class="daily_event_inner">
                                         <div class="daily_event_content">
                                             <picture class="c-picture">
-                                                <img class="lazy" data-src="/assets/images/placeholder.webp"
-                                                    alt="参観日" draggable="fasle" width="531" height="354">
+                                                <img class="lazy" data-src="/assets/images/placeholder.webp" alt="参観日"
+                                                    draggable="fasle" width="531" height="354">
                                             </picture>
                                             <h4>参観日</h4>
                                         </div>
                                         <div class="daily_event_content">
                                             <picture class="c-picture">
-                                                <img class="lazy" data-src="/assets/images/placeholder.webp"
-                                                    alt="大根掘り" draggable="fasle" width="531" height="354">
+                                                <img class="lazy" data-src="/assets/images/placeholder.webp" alt="大根掘り"
+                                                    draggable="fasle" width="531" height="354">
                                             </picture>
                                             <h4>大根掘り</h4>
                                         </div>
@@ -817,8 +817,8 @@
                                     <div class="daily_event_inner">
                                         <div class="daily_event_content">
                                             <picture class="c-picture">
-                                                <img class="lazy" data-src="/assets/images/placeholder.webp"
-                                                    alt="おもちつき" draggable="fasle" width="531" height="354">
+                                                <img class="lazy" data-src="/assets/images/placeholder.webp" alt="おもちつき"
+                                                    draggable="fasle" width="531" height="354">
                                             </picture>
                                             <h4>おもちつき</h4>
                                         </div>
@@ -863,15 +863,15 @@
                                     <div class="daily_event_inner">
                                         <div class="daily_event_content">
                                             <picture class="c-picture">
-                                                <img class="lazy" data-src="/assets/images/placeholder.webp"
-                                                    alt="豆まき集会" draggable="fasle" width="531" height="354">
+                                                <img class="lazy" data-src="/assets/images/placeholder.webp" alt="豆まき集会"
+                                                    draggable="fasle" width="531" height="354">
                                             </picture>
                                             <h4>豆まき集会</h4>
                                         </div>
                                         <div class="daily_event_content">
                                             <picture class="c-picture">
-                                                <img class="lazy" data-src="/assets/images/placeholder.webp"
-                                                    alt="学習発表会" draggable="fasle" width="531" height="354">
+                                                <img class="lazy" data-src="/assets/images/placeholder.webp" alt="学習発表会"
+                                                    draggable="fasle" width="531" height="354">
                                             </picture>
                                             <h4>学習発表会</h4>
                                         </div>
@@ -900,8 +900,8 @@
                                         </div>
                                         <div class="daily_event_content">
                                             <picture class="c-picture">
-                                                <img class="lazy" data-src="/assets/images/placeholder.webp"
-                                                    alt="卒園式" draggable="fasle" width="531" height="354">
+                                                <img class="lazy" data-src="/assets/images/placeholder.webp" alt="卒園式"
+                                                    draggable="fasle" width="531" height="354">
                                             </picture>
                                             <h4>卒園式</h4>
                                         </div>
