coding admission page done :fire:

--- a/admission/index.html
+++ b/admission/index.html
@@ -391,10 +391,185 @@
                         <span class="indicator" data-tabs-indicator></span>
                     </div>
                     <div class="admission_tabs">
-                        <div class="admission_tabs_content --active" data-tabs-content="tab1">1</div>
-                        <div class="admission_tabs_content" data-tabs-content="tab2">2</div>
-                        <div class="admission_tabs_content" data-tabs-content="tab3">3</div>
-                        <div class="admission_tabs_content" data-tabs-content="tab4">4</div>
+                        <div class="admission_tabs_content --active" data-tabs-content="tab1">
+                            <div class="admission_tabs_title">
+                                <p>「保育園枠」ご利用の場合</p>
+                            </div>
+                            <div class="admission_hoiku">
+                                <div class="admission_hoiku_desc">
+                                    <p>
+                                        保護者の方が3号認定の場合「保育園枠」をご利用いただけます。「保育園枠」の入園の申し込みは各自治体からとなります。まずは園見学にお越しの上、このコピーはダミーです。このコピーはダミーです。このコピーはダミーです。このコピーはダミーです。このコピーはダミーです。
+                                    </p>
+                                </div>
+                                <div class="admission_process">
+                                    <div class="admission_process_list">
+                                        <div class="admission_process_items">
+                                            <div class="admission_process_inner">
+                                                <h3>園のご見学</h3>
+                                            </div>
+                                            <p>
+                                                ご見学はいつでも可能です。<br class="sp-only" />制度のご説明もいたしますのでぜひお越しください。
+                                            </p>
+                                        </div>
+                                        <div class="admission_process_items">
+                                            <div class="admission_process_inner">
+                                                <h3>入園受付</h3>
+                                            </div>
+                                            <p>
+                                                板橋区 子ども家庭部 保育サービス課にて<br class="sp-only" />お申し込みください。
+                                            </p>
+                                        </div>
+                                        <div class="admission_process_items">
+                                            <div class="admission_process_inner">
+                                                <h3>入園調整</h3>
+                                            </div>
+                                            <p>
+                                                定員以上の応募があった場合、<br class="sp-only" />板橋区にて調整を行う場合があります。
+                                            </p>
+                                        </div>
+                                        <div class="admission_process_items">
+                                            <div class="admission_process_inner">
+                                                <h3>結果発表</h3>
+                                            </div>
+                                            <p>
+                                                板橋区から入園の可否について連絡があります。<br class="sp-only" />入園されるご家庭に園より「入園のご案内」を発送します。
+                                            </p>
+                                        </div>
+                                        <div class="admission_process_items">
+                                            <div class="admission_process_inner">
+                                                <h3>入園</h3>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="admission_hoiku_btn">
+                                    <a href="https://www.city.itabashi.tokyo.jp/kusei/soshiki/kodomokatei/1006973.html"
+                                        target="_blank" rel="noopener noreferrer">
+                                        <p>板橋区 ウェブサイト</p>
+                                        <svg class="window" xmlns="http://www.w3.org/2000/svg" width="20"
+                                            height="15.294" viewBox="0 0 20 15.294">
+                                            <g id="Group_125" data-name="Group 125" transform="translate(-626 -5692)">
+                                                <g id="Rectangle_46" data-name="Rectangle 46"
+                                                    transform="translate(630.706 5692)" fill="none" stroke="#559c21"
+                                                    stroke-width="1.5">
+                                                    <rect width="15.294" height="10.588" rx="2" stroke="none"></rect>
+                                                    <rect x="0.75" y="0.75" width="13.794" height="9.088" rx="1.25"
+                                                        fill="none"></rect>
+                                                </g>
+                                                <g id="Rectangle_45" data-name="Rectangle 45"
+                                                    transform="translate(626 5696.706)" fill="#fff" stroke="#559c21"
+                                                    stroke-width="1.5">
+                                                    <rect width="15.294" height="10.588" rx="2" stroke="none"></rect>
+                                                    <rect x="0.75" y="0.75" width="13.794" height="9.088" rx="1.25"
+                                                        fill="none"></rect>
+                                                </g>
+                                            </g>
+                                        </svg>
+                                    </a>
+                                    <a href="/admission/faq/">
+                                        <p>よくあるご質問はこちら</p>
+                                        <svg width="20" height="12">
+                                            <use xlink:href="#arrow-icon"></use>
+                                        </svg>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="admission_tabs_content" data-tabs-content="tab2">
+                            <div class="admission_tabs_title">
+                                <p>「幼稚園枠」ご利用の場合</p>
+                            </div>
+                            <div class="admission_hoiku">
+                                <div class="admission_hoiku_desc">
+                                    <p>
+                                        保護者の方が1認定の場合「幼稚園枠」のご利用となります。
+                                        「幼稚園枠」は、園へ直接お申し込みいただきます。まずは園見学にお越しの上、このコピーはダミーです。このコピーはダミーです。このコピーはダミーです。このコピーはダミーです。このコピーはダミーです。
+                                    </p>
+                                </div>
+                                <div class="admission_process">
+                                    <div class="admission_process_list">
+                                        <div class="admission_process_items">
+                                            <div class="admission_process_inner">
+                                                <h3>園のご見学</h3>
+                                            </div>
+                                            <p>
+                                                ご見学時「入園願書（8,000円）」を<br class="sp-only" />販売いたします。
+                                            </p>
+                                        </div>
+                                        <div class="admission_process_items">
+                                            <div class="admission_process_inner">
+                                                <h3>入園願書受付</h3>
+                                            </div>
+                                            <p>
+                                                「入園願書」記載の期日までに<br class="sp-only" />郵送またはご持参ください。
+                                            </p>
+                                        </div>
+                                        <div class="admission_process_items">
+                                            <div class="admission_process_inner">
+                                                <h3>入園選考</h3>
+                                            </div>
+                                            <p>
+                                                お子さまと保護者の方にご来園いただき、<br class="sp-only" />面接いたします。
+                                            </p>
+                                        </div>
+                                        <div class="admission_process_items">
+                                            <div class="admission_process_inner">
+                                                <h3>選考結果発表</h3>
+                                            </div>
+                                            <p>
+                                                「入園のご案内」の発送をもって<br class="sp-only" />発表とさせていただきます。
+                                            </p>
+                                        </div>
+                                        <div class="admission_process_items">
+                                            <div class="admission_process_inner">
+                                                <h3>入園</h3>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="admission_hoiku_btn">
+                                    <a href="/" target="_blank" rel="noopener noreferrer">
+                                        <p>募集概要 (PDF)</p>
+                                    </a>
+                                    <a href="/admission/faq/">
+                                        <p>よくあるご質問はこちら</p>
+                                        <svg width="20" height="12">
+                                            <use xlink:href="#arrow-icon"></use>
+                                        </svg>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="admission_tabs_content" data-tabs-content="tab3">
+                            <div class="admission_tabs_title">
+                                <p>どちらの枠を利用すべきかわからない</p>
+                            </div>
+                            <div class="admission_hoiku">
+                                <div class="admission_hoiku_img">
+                                    <picture>
+                                        <source media="(max-width: 1023px)"
+                                            data-srcset="/assets/images/placeholder.webp">
+                                        <img class="lazy" data-src="/assets/images/placeholder.webp" alt="チャートが入ります"
+                                            width="940" height="578" draggable="false">
+                                    </picture>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="admission_tabs_content" data-tabs-content="tab4">
+                            <div class="admission_tabs_title">
+                                <p>療育クラスをご検討の方</p>
+                            </div>
+                            <div class="admission_hoiku">
+                                <div class="admission_hoiku_img">
+                                    <picture>
+                                        <source media="(max-width: 1023px)"
+                                            data-srcset="/assets/images/placeholder.webp">
+                                        <img class="lazy" data-src="/assets/images/placeholder.webp" alt="チャートが入ります"
+                                            width="940" height="578" draggable="false">
+                                    </picture>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                     <div class="admission_nav sp-only">
                         <ul>
